--- a/src/components/checkStatusByID/status_id.css
+++ b/src/components/checkStatusByID/status_id.css
@@ -5,14 +5,15 @@
 }
 /* 67b376686f96c1423121125b */
 .main-checkkById {
-  background-color: rgba(36, 37, 36, 0.413);
-  min-height: 100vh;
+  background-color: rgba(42, 174, 183, 0.413);
+  min-height: 150vh;
 }
 
 .input_id {
   width: 100%;
   text-align: center;
-padding: 10px 0px;  margin:  0px;
+padding: 30px 0px; 
+ margin:  0px;
 }
 .input_id .btn {
   background-color: rgb(0, 0, 0);
@@ -23,8 +24,8 @@ padding: 10px 0px;  margin:  0px;
 .input_id input {
   padding: 10px 15px;
   border-radius: 3px;
-  width: 200px;
-  height: 30px;
+  width: 250px;
+  height: 37px;
   text-align: center;
   border: none;
   outline: none;
