--- a/src/components/checkStatusByID/status_id.css
+++ b/src/components/checkStatusByID/status_id.css
@@ -5,8 +5,9 @@
 }
 /* 67b376686f96c1423121125b */
 .main-checkkById {
-  background-color: rgba(42, 174, 183, 0.413);
-  min-height: 150vh;
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); 
+height: 150vh;
+
 }
 
 .input_id {
@@ -24,7 +25,7 @@ padding: 30px 0px;
 .input_id input {
   padding: 10px 15px;
   border-radius: 3px;
-  width: 250px;
+  width: 60%;
   height: 37px;
   text-align: center;
   border: none;
