--- a/src/components/deetailForm/detailform.css
+++ b/src/components/deetailForm/detailform.css
@@ -1,5 +1,7 @@
 .form-card{
-    background-image: linear-gradient( #fff1eb 0%, #ace0f9 100%);}
+    background-image: linear-gradient(to bottom, #8dcff6 0%, #aefdbd 100%); 
+    
+}
 
     .form-card input[type="file"] {
         padding: 10px 10px;
@@ -8,5 +10,28 @@
 
     .form-card input{
         margin-left: 7px;
-    }
+    }   
     
+
+    .form-container {
+        display: flex
+    ;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        padding: 20px;
+        background-image: linear-gradient(to bottom, #8dcff6 0%, #aefdbd 100%); 
+    }
+
+    .form-card {
+        /* background: white; */
+        /* border-radius: 20px; */
+        /* box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); */
+        padding: 30px;
+        max-width: 90%;
+        width: 100%;
+        text-align: center;
+        box-shadow:  none !important;
+        background-image: linear-gradient(to bottom, #8dcff6 0%, #aefdbd 100%); 
+
+    }
