--- a/src/components/newPassform/newpass.css
+++ b/src/components/newPassform/newpass.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 100wh;
     padding: 20px;
     background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); 
    }
@@ -102,3 +102,19 @@
       font-size: 14px;
     }
   }
+
+
+  .btn-loginAdmin{
+    /* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);  */
+    background-color: #83d3e5;
+    text-align: center;
+    padding: 5px 0px;
+}
+
+.btn-loginAdmin button{
+    color: rgb(5, 4, 4);
+    background: linear-gradient(to right, #4facfe, #00f2fe);
+    font-weight: bolder;
+
+    
+}
