--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,20 @@ align-items: center;
     font-size: 20px;
     
 }
+.No-data-div2{
+    color: white;
+    background-color: rgb(159, 156, 152);
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    font-weight: bolder;
+    font-size: 20px;
+    
+}
 
 .logo-pic-menu{
     background-color: rgb(0, 255, 38);
@@ -53,22 +67,12 @@ align-items: center;
     position: fixed;
 } 
 
-@media(min-width:599px){
+@media(min-width:599px){    
     .logo-pic-menu{
         display: none;
     }
 }
 
-.btn-loginAdmin{
-    background-color: rgb(42, 226, 226);
-    text-align: center;
-    padding: 5px 0px;
-}
 
-.btn-loginAdmin button{
-    color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
-    
-}
 
 
